# cest

./: .gitlab-ci.yml  CMakeLists.txt  README.md  genindex.html  index.html  main.py  objects.inv  processing.html  search.html  searchindex.js  setup.py  simulation.html
.ci/: build  install  pages
.github/workflows/: pages.yml
_sources/: processing.rst.txt  simulation.rst.txt
_sources/api/: functions.rst.txt  index.rst.txt  tasks.rst.txt
api/: functions.html  index.html  tasks.html
cest/: __init__.py  _cest.cpp  bm2.cpp  bm2.h  bm3_partial.cpp  bm3_partial.h  functions.py  misc.cpp  misc.h  pulses.py  simulator.py  species.py  wasabi.cpp  wasabi.h  wasabi_sampler.stan
cest/tasks/: __init__.py  edit_spectrum.py  mtr.py  refine.py  shift_spectrum.py  utils.py  wassr.py
docs/: Makefile  conf.py  index.rst  simulation.rst
docs/_static/: cest.txt
docs/api/: functions.rst  tasks.rst
examples/: processing.py  z_spectra.py
examples/khlebnikov_2019/: README.md  figure_1.py  species.py
examples/shaghagi_2024/: README.md  figure_1.py  figure_2.py
examples/woessner_2005/: README.md  common.py  figure_1.py  figure_2.py  figure_3.py
tasks/: __init__.py  refine.py  shift_spectrum.py  utils.py  wassr.py
